<resources>
    <string name="app_name">We Market</string>
    <string name="buyer_title_home">@string/app_name</string>
    <string name="buyer_title_orders">@string/app_name</string>
    <string name="buyer_title_profile">@string/app_name</string>
    <string name="buyer_title_choose_food">Today\'s Food</string>
    <string name="buyer_title_market_details">@string/app_name</string>
    <string name="buyer_title_checkout">Checkout</string>
    <string name="buyer_title_success">Success</string>
    <string name="shipper_title_orders">Confirm Orders</string>
    <string name="shipper_title_receive_order">Order Status</string>
    <string name="shipper_title_maps">Map</string>
    <string name="shipper_title_profile">Profile</string>
    <string name="shipper_receive_order_button_text">Receive order</string>
    <string name="search_label_buyer">Search food name</string>
    <string name="search_hint_buyer">Cá ba sa</string>
    <string name="buyer_home_greeting_title">Hello, %s</string>
    <string name="shipper_home_greeting_title">Hello, %s</string>
    <string name="buyer_home_greeting_subtitle">What do you want to eat?</string>
    <string name="shipper_home_greeting_subtitle">Have a safe driving day</string>
    <string name="shipper_zero_orders_message">You do not have any orders currently</string>
    <string name="shipper_zero_orders_submessage">Let\'s wait for the latest order to arrive</string>
    <string name="shipper_arrived_orders_message">You have an order to confirm</string>
    <string name="shipper_arrived_orders_submessage">Please check order details carefully</string>
    <string name="shipper_zero_orders_button_text">Let\'s start</string>
    <string name="shipper_arrived_orders_button_text">Check order status</string>
    <string name="buyer_market_cover_photo">Market cover photo here</string>
    <string name="buyer_dialog_food_name">%s</string>
    <string name="buyer_dialog_food_unit">/kg</string>
    <string name="buyer_dialog_message">Lời nhắn cho cửa hàng</string>
    <string name="buyer_dialog_add_to_cart_message">Thêm vào giỏ hàng</string>
    <string name="buyer_success_h1_text">Your order is created!</string>
    <string name="buyer_success_h3_text">we\'ll deliver your order immediately,\nmake sure your order put on the doorstep</string>
    <string name="buyer_confirmed_h1_text">Your order is confirmed!</string>
    <string name="buyer_confirmed_h3_text">Please leave feedback for\nyour markets and shipper</string>
    <string name="buyer_success_check_order_button_text">Check order status</string>
    <string name="buyer_open_text">Open</string>
    <string name="buyer_checkout_keep_social_distancing_text">Keep social distancing</string>
    <string name="buyer_checkout_keep_social_distancing_description">Leave your order on the doorstep</string>
    <string name="buyer_checkout_deliver_to_title">Deliver to</string>
    <string name="buyer_checkout_deliver_note_text">Add a note of delivery address</string>
    <string name="text_buyer_checkout_bucket_title">My Cart</string>
    <string name="buyer_checkout_bucket_add_items">Add items</string>
    <string name="buyer_checkout_payment_title">Payment</string>
    <string name="buyer_checkout_payment_items_cost">Food total</string>
    <string name="buyer_checkout_payment_delivery_fee">Delivery total</string>
    <string name="buyer_free_delivery">Free delivery</string>
    <string name="default_food_unit">kg</string>
    <string name="default_food_currency">VNĐ</string>
    <string name="default_market_rating">5.0</string>
    <string name="default_market_distance">1.0 km</string>
    <string name="default_market_verified">Verified</string>
    <string name="default_food_left">5 Left</string>
    <string name="default_delivery_fee">Free delivery</string>
    <string name="buyer_checkout_button_text">Checkout</string>
    <string name="shipper_choose_delivery_dialog_title">Choose Delivery</string>
    <string name="google_maps_key">AIzaSyCQ1eSkmg9CHe06IqtFJaG5CkPhtL8sy7s</string>
</resources>