<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph_shipper"
    app:startDestination="@id/destination_shipper_home">

    <fragment
        android:id="@+id/destination_shipper_home"
        android:name="com.example.wemarketandroid.views.shipper.HomeFragment"
        android:label="@string/buyer_title_home"
        tools:layout="@layout/fragment_shipper_home" >
        <action
            android:id="@+id/action_destination_shipper_home_to_destination_shipper_receieve_order"
            app:destination="@id/destination_shipper_receieve_order" />
    </fragment>
    <fragment
        android:id="@+id/destination_shipper_receieve_order"
        android:name="com.example.wemarketandroid.views.shipper.ReceiveOrderFragment"
        android:label="@string/shipper_title_receive_order"
        tools:layout="@layout/fragment_shipper_receive_order" >
        <action
            android:id="@+id/action_destination_shipper_receieve_order_to_destination_shipper_maps"
            app:destination="@id/destination_shipper_maps" />
    </fragment>
    <fragment
        android:id="@+id/destination_shipper_maps"
        android:name="com.example.wemarketandroid.views.shipper.MapsFragment"
        android:label="@string/shipper_title_maps"
        tools:layout="@layout/fragment_shipper_maps" >
    </fragment>
    <fragment
        android:id="@+id/destination_shipper_orders"
        android:name="com.example.wemarketandroid.views.shipper.OrdersFragment"
        android:label="@string/shipper_title_orders"
        tools:layout="@layout/fragment_shipper_orders" >
    </fragment>
    
</navigation>