<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.buyer.CheckoutFragment"
    android:orientation="vertical"
    android:showDividers="middle"
    android:divider="@drawable/empty_wide_divider"
    android:paddingLeft="@dimen/WeMarket.space.small"
    android:paddingRight="@dimen/WeMarket.space.small"
    android:paddingTop="@dimen/WeMarket.space.small">

    <androidx.cardview.widget.CardView
        style="@style/WeMarketStyles.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/WeMarketStyles.padding.small">

            <TextView
                android:id="@+id/text_buyer_checkout_keep_social_distancing_text"
                style="@style/WeMarketStyles.Text.h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyer_checkout_keep_social_distancing_text"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/WeMarketStyles.Text.h3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyer_checkout_keep_social_distancing_description"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/text_buyer_checkout_keep_social_distancing_text" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_social_distancing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/WeMarketStyles.padding.small">
            <TextView
                android:id="@+id/text_buyer_checkout_deliver_to_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                android:text="@string/buyer_checkout_deliver_to_title"
                style="@style/WeMarketStyles.Text.h2"
                />
            <TextView
                android:id="@+id/text_buyer_checkout_deliver_to_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toBottomOf="@+id/text_buyer_checkout_deliver_to_title"
                card_view:layout_constraintStart_toStartOf="parent"
                android:text="Delivery address here!"
                style="@style/WeMarketStyles.Text.h3"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintBottom_toTopOf="@+id/textInputLayout_buyer_checkout_delivery_notes"
                android:src="@drawable/icon_your_location"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_buyer_checkout_delivery_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:boxBackgroundColor="@color/primary"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/text_buyer_checkout_deliver_to_address"
                card_view:startIconDrawable="@drawable/icon_notes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_buyer_checkout_delivery_notes"
                    style="@style/WeMarketStyles.Text.h3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/buyer_checkout_deliver_note_text" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/WeMarketStyles.CardView"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/WeMarketStyles.padding.small">
            <TextView
                android:id="@+id/text_buyer_checkout_bucket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                android:text="@string/text_buyer_checkout_bucket_title"
                style="@style/WeMarketStyles.Text.h2"
                />

            <Button
                android:id="@+id/button_buyer_checkout_add_items"
                style="@style/WeMarketStyles.Text.h3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:drawableLeft="@drawable/icon_add"
                android:text="@string/buyer_checkout_bucket_add_items"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_buyer_checkout_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toBottomOf="@+id/button_buyer_checkout_add_items"
                card_view:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/WeMarketStyles.CardView"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/WeMarketStyles.padding.small">
            <TextView
                android:id="@+id/text_buyer_checkout_payment_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                android:text="@string/buyer_checkout_payment_title"
                style="@style/WeMarketStyles.Text.h2"
                />
            <TextView
                android:id="@+id/text_buyer_checkout_payment_items_cost_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toBottomOf="@+id/text_buyer_checkout_payment_title"
                card_view:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/WeMarket.space.medium"
                android:text="@string/buyer_checkout_payment_items_cost"
                style="@style/WeMarketStyles.Text.h3"
                />

            <TextView
                android:id="@+id/text_buyer_checkout_payment_items_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toBottomOf="@+id/text_buyer_checkout_payment_title"
                card_view:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/WeMarket.space.medium"
                android:text="@string/buyer_checkout_payment_items_cost"
                style="@style/WeMarketStyles.Text.h3"
                />

            <TextView
                android:id="@+id/text_buyer_checkout_payment_delivery_fee_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toBottomOf="@+id/text_buyer_checkout_payment_items_cost_label"
                card_view:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/WeMarket.space.small"
                android:text="%d VND"
                style="@style/WeMarketStyles.Text.h3"
                />
            <TextView
                android:id="@+id/text_buyer_checkout_payment_delivery_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toBottomOf="@+id/text_buyer_checkout_payment_items_cost"
                card_view:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/WeMarket.space.small"
                android:text="%d VND"
                style="@style/WeMarketStyles.Text.h3"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>